fixed no overflow scroll on portfolio page by changing .navSidebar classes to display instead of visibility; broke transition slide in/out

--- a/src/Components/Navbar/_navbar.scss
+++ b/src/Components/Navbar/_navbar.scss
@@ -13,11 +13,13 @@
   z-index: $sidebar-layer;
 }
 .navSidebar-off {
+  display: none;
   opacity: 0;
+  transition: all 2.25s ease-in-out;
   visibility: hidden;
-  transition: all 0s ease-in-out;
 }
 .navSidebar-on {
+  display: block;
   opacity: 1;
   visibility: visible;
 }
@@ -32,11 +34,13 @@
   z-index: $overlay-layer;
 }
 .overlay-off {
+  display: none;
   opacity: 0;
   visibility: hidden;
-  transition: all 0.25s ease-in-out;
+  transition: all 2.25s ease-in-out;
 }
 .overlay-on {
+  display: block;
   opacity: 1;
   visibility: visible;
 }
